--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           </div>
           <nav>
             <ul class="header__nav">
-              <li><a href="">HOME</a></li>
-              <li><a href="">ABOUT</a></li>
-              <li><a href="">SERVICES</a></li>
-              <li><a href="">BLOG</a></li>
-              <li><a href="">CONTACTS</a></li>
+              <li><a href="./index.html" class="active">HOME</a></li>
+              <li><a href="./about.html">ABOUT</a></li>
+              <li><a href="./services.html">SERVICES</a></li>
+              <li><a href="./blog.html">BLOG</a></li>
+              <li><a href="./contacts.html">CONTACTS</a></li>
             </ul>
           </nav>
         </div>
@@ -81,44 +81,206 @@
               quisquam eum?
             </p>
             <a href="" class="btn bg--primary">MORE</a>
-            <span></span>
+            <span class="homeServices__hover"></span>
           </div>
           <div class="homeServices__card">
             <h3>OIL CHANGE</h3>
-            <i class="fa-solid fa-gears"></i>
+            <i class="fa-solid fa-droplet"></i>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Aspernatur, autem nisi. Itaque dolor unde quo, est nisi fuga
               quisquam eum?
             </p>
             <a href="" class="btn bg--primary">MORE</a>
-            <span></span>
+            <span class="homeServices__hover"></span>
           </div>
           <div class="homeServices__card">
             <h3>ENGINE REPAIR</h3>
-            <i class="fa-solid fa-gears"></i>
+            <i class="fa-solid fa-filter"></i>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Aspernatur, autem nisi. Itaque dolor unde quo, est nisi fuga
               quisquam eum?
             </p>
             <a href="" class="btn bg--primary">MORE</a>
-            <span></span>
+            <span class="homeServices__hover"></span>
           </div>
           <div class="homeServices__card">
             <h3>SCHEDULED MAINTENANCE</h3>
-            <i class="fa-solid fa-gears"></i>
+            <i class="fa-solid fa-wrench"></i>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Aspernatur, autem nisi. Itaque dolor unde quo, est nisi fuga
               quisquam eum?
             </p>
             <a href="" class="btn bg--primary">MORE</a>
-            <span></span>
+            <span class="homeServices__hover"></span>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- SERVICES -->
+    <section class="services py--1">
+      <div class="container">
+        <div class="services__title bg--primary">
+          <h2 class="title">SERVICES</h2>
+        </div>
+        <div class="services__wrapper bg--primary">
+          <div class="services__slider">
+            <div class="services__card">
+              <img src="./img/home/page1_pic1.jpg" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolores ducimus fuga eligendi et cupiditate atque? Nihil, sint
+                fugiat beatae saepe tenetur autem commodi expedita.
+              </p>
+            </div>
+            <div class="services__card">
+              <img src="./img/home/page1_pic2.jpg" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolores ducimus fuga eligendi et cupiditate atque? Nihil, sint
+                fugiat beatae saepe tenetur autem commodi expedita.
+              </p>
+            </div>
+            <div class="services__card">
+              <img src="./img/home/page1_pic3.jpg" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolores ducimus fuga eligendi et cupiditate atque? Nihil, sint
+                fugiat beatae saepe tenetur autem commodi expedita.
+              </p>
+            </div>
+            <div class="services__card">
+              <img src="./img/home/page1_pic1.jpg" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolores ducimus fuga eligendi et cupiditate atque? Nihil, sint
+                fugiat beatae saepe tenetur autem commodi expedita.
+              </p>
+            </div>
+            <div class="services__card">
+              <img src="./img/home/page1_pic2.jpg" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolores ducimus fuga eligendi et cupiditate atque? Nihil, sint
+                fugiat beatae saepe tenetur autem commodi expedita.
+              </p>
+            </div>
+            <div class="services__card">
+              <img src="./img/home/page1_pic3.jpg" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolores ducimus fuga eligendi et cupiditate atque? Nihil, sint
+                fugiat beatae saepe tenetur autem commodi expedita.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHAT WE DO -->
+    <section class="homeAbout">
+      <div class="container">
+        <div class="homeAbout__wrapper bg--light">
+          <div class="homeAbout__wrapper--text">
+            <h2 class="title">WHAT WE DO</h2>
+            <p>
+              Proin dictum elemum velit terdpibus sceleue vitaepeecon eoc in vel
+              ipsum auctorulvinaroin ullamcorper u et felisestiulis lacinia
+              esroin dictum elemenelit. Fusce euismod consequat antrem ipsm door
+              sit amet coectetuer adipiscing elit. Pellentesque sed dololiquam
+              cong.
+            </p>
+            <p class="noBorder">
+              Proin dictum elemum velit terdpibus sceleue vitaepeecon eoc in vel
+              ipsum auctorulvinaroin ullamcorper u et felisestiulis lacinia
+              esroin dictum elemenelit. Fusce euismod consequat antrem ipsm door
+              sit amet coectetuer adipiscing elit. Pellentesque sed dololiquam
+              cong.
+            </p>
+          </div>
+          <div class="homeAbout__wrapper--text">
+            <h2 class="title">WHY US?</h2>
+            <p>
+              Cubilipende sollicitudineied leo pharea aumennec in velit veaugn
+              erase dialor innia est. Proin dictum elemum velit terdpibus
+              sceleue vitaepeecon eoc in vel ipsum auctorulvinaroin ullamcorper
+              u et felisestiulis lacinia est.
+            </p>
+            <p>
+              Proin dictum elemum veliterdpibus sceleue vitaepeecon eonec in vel
+              ipsum auctorulv inaroin ullamcorper u et felisestiulis lacinia
+              eroin dictum elemenelit.
+            </p>
+            <p class="noBorder">
+              Proin dictum elemenelit. Fusce euismod consequat antrem ipsm door
+              sit amet con sectetuer adipiscing elit. Pellentesque sed
+              dololiquam cong.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="cta py--1">
+      <div class="container">
+        <div class="cta__wrapper bg--lightGray">
+          <h2>NO BETTER CAR SERVICE ANYWHERE</h2>
+          <a href="" class="btn bg--primary">REQUEST AN APPOINTMENT</a
+          ><i class="fa-regular fa-calendar-days"></i>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer py--1">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__social">
+            <h4>Car service © 2024 • <a href="">Privacy Policy</a></h4>
+            <ul class="footer__social--icons">
+              <li>
+                <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-pinterest"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__address">
+            <h4>
+              9863 - 9867 Mill Road, Cambridge, MG09 99HT Freephone: +1 800 559
+              6580
+            </h4>
+            <h4>
+              9870 St Vincent Place, Glasgow, DC 45 Fr 45. Freephone: +1 800 559
+              6580
+            </h4>
+          </div>
+          <div class="footer__map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43786.318567629045!2d121.31736377937365!3d14.065343536095517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd5c96860a894b%3A0xfa9e0f05004f4aca!2sSan%20Pablo%20City%2C%20Laguna!5e0!3m2!1sen!2sph!4v1720146448794!5m2!1sen!2sph"
+              width="680"
+              height="294"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="./js/slider.js"></script>
