--- a/services.html
+++ b/services.html
@@ -36,6 +36,151 @@
       </div>
     </header>
 
+    <!-- SERVICES -->
+    <section class="servicesBanner">
+      <div class="container">
+        <div class="servicesBanner__title bg--gray">
+          <h2 class="title">SERVICES</h2>
+        </div>
+        <div class="servicesBanner__wrapper bg--gray">
+          <div class="servicesBanner__slider">
+            <div class="servicesBanner__items">
+              <div class="servicesBanner__section">
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic1.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic2.jpg" alt="" />
+                  <a href="">Suspension and shock absorbers</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="servicesBanner__items">
+              <div class="servicesBanner__section">
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic3.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic4.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="servicesBanner__items">
+              <div class="servicesBanner__section">
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic5.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic6.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="servicesBanner__items">
+              <div class="servicesBanner__section">
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic1.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic2.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="servicesBanner__items">
+              <div class="servicesBanner__section">
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic3.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic4.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="servicesBanner__items">
+              <div class="servicesBanner__section">
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic5.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+                <div class="servicesBanner__card">
+                  <img src="./img/services/page3_pic6.jpg" alt="" />
+                  <a href="">Brake System</a>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Numquam ipsam facilis quia, voluptates cupiditate facere?
+                    <a href="">...</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- REPORT -->
     <section class="servicesReport">
       <div class="container">
