--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__social">
-            <h4>Car service © 2024 • <a href="">Privacy Policy</a></h4>
+            <h4>Car service © 2024 • <a href="./privacy.html">Privacy Policy</a></h4>
             <ul class="footer__social--icons">
               <li>
                 <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
