--- a/services.html
+++ b/services.html
@@ -44,136 +44,124 @@
         </div>
         <div class="servicesBanner__wrapper bg--gray">
           <div class="servicesBanner__slider">
-            <div class="servicesBanner__items">
-              <div class="servicesBanner__section">
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic1.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic2.jpg" alt="" />
-                  <a href="">Suspension and shock absorbers</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
+            <div class="servicesBanner__section">
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic1.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
+              </div>
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic2.jpg" alt="" />
+                <a href="">Suspension and shock absorbers</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
               </div>
             </div>
-            <div class="servicesBanner__items">
-              <div class="servicesBanner__section">
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic3.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic4.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
+            <div class="servicesBanner__section">
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic3.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
+              </div>
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic4.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
               </div>
             </div>
-            <div class="servicesBanner__items">
-              <div class="servicesBanner__section">
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic5.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic6.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
+            <div class="servicesBanner__section">
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic5.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
+              </div>
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic6.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
               </div>
             </div>
-            <div class="servicesBanner__items">
-              <div class="servicesBanner__section">
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic1.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic2.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
+            <div class="servicesBanner__section">
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic1.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
+              </div>
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic2.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
               </div>
             </div>
-            <div class="servicesBanner__items">
-              <div class="servicesBanner__section">
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic3.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic4.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
+            <div class="servicesBanner__section">
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic3.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
+              </div>
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic4.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
               </div>
             </div>
-            <div class="servicesBanner__items">
-              <div class="servicesBanner__section">
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic5.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
-                <div class="servicesBanner__card">
-                  <img src="./img/services/page3_pic6.jpg" alt="" />
-                  <a href="">Brake System</a>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Numquam ipsam facilis quia, voluptates cupiditate facere?
-                    <a href="">...</a>
-                  </p>
-                </div>
+            <div class="servicesBanner__section">
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic5.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
+              </div>
+              <div class="servicesBanner__card">
+                <img src="./img/services/page3_pic6.jpg" alt="" />
+                <a href="">Brake System</a>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam ipsam facilis quia, voluptates cupiditate facere?
+                  <a href="">...</a>
+                </p>
               </div>
             </div>
           </div>
@@ -252,7 +240,7 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__social">
-            <h4>Car service © 2024 • <a href="">Privacy Policy</a></h4>
+            <h4>Car service © 2024 • <a href="./privacy.html">Privacy Policy</a></h4>
             <ul class="footer__social--icons">
               <li>
                 <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
