--- a/privacy.html
+++ b/privacy.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Services PRIVACY POLICY</title>
+    <link rel="icon" href="./img/home/logo.png" />
     <link rel="stylesheet" href="./dist/css/main.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body class="bg--dark">
     <!-- HEADER -->
@@ -19,7 +21,11 @@
             <img src="./img/home/logo.png" alt="" />
           </div>
           <nav>
-            <ul class="header__nav">
+            <ul
+              class="header__nav"
+              data-aos="fade-down"
+              data-aos-duration="1300"
+            >
               <li><a href="./index.html">HOME</a></li>
               <li><a href="./about.html">ABOUT</a></li>
               <li><a href="./services.html">SERVICES</a></li>
@@ -35,7 +41,12 @@
     <section class="privacyPolicy">
       <div class="container">
         <div class="privacyPolicy__wrapper bg--light">
-          <div class="privacyPolicy__terms">
+          <div
+            class="privacyPolicy__terms"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+            data-aos-offset="500"
+          >
             <h2 class="title">TERMS OF USE</h2>
             <p>
               Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas
@@ -57,7 +68,11 @@
               augue nec augue. Nam elit magna, hendrerit sit ame.
             </p>
           </div>
-          <div class="privacyPolicy__policy">
+          <div
+            class="privacyPolicy__policy"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+          >
             <h2 class="title">PRIVACY POLICY</h2>
             <p>
               <a href=""
@@ -73,7 +88,7 @@
               gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci
               ac sem.
             </p>
-            <div class="divider"></div>
+            <div class="divider__gray"></div>
             <p>
               <a href=""
                 >Quis autem vel eum iure reprehenderit qui in ea voluptate velit
@@ -97,7 +112,7 @@
               Proin dictum elementum velit. Fusce euismod consequat ante. Lorem
               ipsum dolor sit amet, consectetuer adipiscing elit.
             </p>
-            <div class="divider"></div>
+            <div class="divider__gray"></div>
             <p>
               <a href=""
                 >Duis ultricies pharetra magna. Donec accumsan malesuada orci.
@@ -120,10 +135,14 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer py--1">
+    <footer class="footer py--2">
       <div class="container">
         <div class="footer__wrapper">
-          <div class="footer__social">
+          <div
+            class="footer__social"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <h4>
               Car service © 2024 • <a href="./privacy.html">Privacy Policy</a>
             </h4>
@@ -142,7 +161,11 @@
               </li>
             </ul>
           </div>
-          <div class="footer__address">
+          <div
+            class="footer__address"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
             <h4>
               9863 - 9867 Mill Road, Cambridge, MG09 99HT Freephone: +1 800 559
               6580
@@ -152,7 +175,11 @@
               6580
             </h4>
           </div>
-          <div class="footer__map">
+          <div
+            class="footer__map"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43786.318567629045!2d121.31736377937365!3d14.065343536095517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd5c96860a894b%3A0xfa9e0f05004f4aca!2sSan%20Pablo%20City%2C%20Laguna!5e0!3m2!1sen!2sph!4v1720146448794!5m2!1sen!2sph"
               width="680"
@@ -167,6 +194,7 @@
       </div>
     </footer>
 
+    <a href="#" class="backToTop"><i class="fa-solid fa-chevron-up"></i></a>
     <!-- <script src="./js/toggleMenu.js"></script> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
