--- a/about.html
+++ b/about.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Services ABOUT</title>
+    <link rel="icon" href="./img/home/logo.png" />
     <link rel="stylesheet" href="./dist/css/main.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body class="bg--dark">
     <!-- HEADER -->
@@ -19,7 +21,11 @@
             <img src="./img/home/logo.png" alt="" />
           </div>
           <nav>
-            <ul class="header__nav">
+            <ul
+              class="header__nav"
+              data-aos="fade-down"
+              data-aos-duration="1300"
+            >
               <li><a href="./index.html">HOME</a></li>
               <li><a href="./about.html" class="active">ABOUT</a></li>
               <li><a href="./services.html">SERVICES</a></li>
@@ -37,35 +43,53 @@
           <h2 class="title">FEATURES</h2>
         </div>
         <div class="features__wrapper bg--gray">
-          <div class="features__card">
+          <div
+            class="features__card"
+            data-aos="fade-right"
+            data-aos-duration="500"
+          >
             <h3>NEQUE PORO QUIS</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              sequi accusantium sed, expedita ipsum nostrum?
+              Cubilipende sollicitudineed leo pharea aumennec in velit veaugun e
+              diam lor innia est. Proin dictum elem velit Fterdpibus sceleue
+              vitaepe.
             </p>
             <a href="" class="btn bg--primary">MORE</a>
           </div>
-          <div class="features__card">
-            <h3>NEQUE PORO QUIS</h3>
+          <div
+            class="features__card"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
+            <h3>SED UT PERSP</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              sequi accusantium sed, expedita ipsum nostrum?
+              Sollicitudineied leo pharetr in velit eaugun eratisque diam lor
+              innia est. Proin dicm elemtum veitdpibu sceleue vita pedeecon era.
             </p>
             <a href="" class="btn bg--primary">MORE</a>
           </div>
-          <div class="features__card">
-            <h3>NEQUE PORO QUIS</h3>
+          <div
+            class="features__card"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
+            <h3>UT PHARETRA AUGUE</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              sequi accusantium sed, expedita ipsum nostrum?
+              Cubilipende sollicitudineied leo pharea aumennec in velit veaugun
+              eraam lor innia est. Proin dictum elem velit Fterdpibus sceleue
+              vitaepe.
             </p>
             <a href="" class="btn bg--primary">MORE</a>
           </div>
-          <div class="features__card">
-            <h3>NEQUE PORO QUIS</h3>
+          <div
+            class="features__card"
+            data-aos="fade-left"
+            data-aos-duration="500"
+          >
+            <h3>MAECEN TRISTIQU</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              sequi accusantium sed, expedita ipsum nostrum?
+              Sollicitudineied leo pharetr in velit eaugun eratisque diam lor
+              innia est. Proin dicm elemtum veitdpibu sceleue vita pedeecon era.
             </p>
             <a href="" class="btn bg--primary">MORE</a>
           </div>
@@ -77,7 +101,11 @@
     <section class="history py--2">
       <div class="container">
         <div class="history__wrapper bg--primary">
-          <div class="history__details">
+          <div
+            class="history__details"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+          >
             <h2 class="title">OUR HISTORY</h2>
             <p>
               Praesent vestibulum molestie lacus. Aenean nonummy hendrerit
@@ -102,7 +130,11 @@
               diam eu massa. Quisque diam lorem.
             </p>
           </div>
-          <div class="history__details">
+          <div
+            class="history__details"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+          >
             <h2 class="title">OPPORTUNITIES</h2>
             <a href="">Neque porro quisquam est tempora incidu</a>
             <p>
@@ -131,7 +163,12 @@
           <h2 class="title">OUR TEAM</h2>
         </div>
         <div class="team__wrapper bg--light">
-          <div class="team__card">
+          <div
+            class="team__card"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+            data-aos-offset="500"
+          >
             <img src="./img/about/page2_pic1.jpg" alt="" />
             <h5>Mark Johnson</h5>
             <p>
@@ -139,7 +176,7 @@
               <a href="">...</a>
             </p>
           </div>
-          <div class="team__card">
+          <div class="team__card" data-aos="fade-up" data-aos-duration="1200">
             <img src="./img/about/page2_pic2.jpg" alt="" />
             <h5>Fade Harper</h5>
             <p>
@@ -147,7 +184,7 @@
               <a href="">...</a>
             </p>
           </div>
-          <div class="team__card">
+          <div class="team__card" data-aos="fade-up" data-aos-duration="1200">
             <img src="./img/about/page2_pic3.jpg" alt="" />
             <h5>John McCoist</h5>
             <p>
@@ -155,7 +192,12 @@
               <a href="">...</a>
             </p>
           </div>
-          <div class="team__card">
+          <div
+            class="team__card"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+            data-aos-offset="500"
+          >
             <img src="./img/about/page2_pic4.jpg" alt="" />
             <h5>Sam Kromstain</h5>
             <p>
@@ -168,11 +210,17 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer py--1">
+    <footer class="footer py--2">
       <div class="container">
         <div class="footer__wrapper">
-          <div class="footer__social">
-            <h4>Car service © 2024 • <a href="./privacy.html">Privacy Policy</a></h4>
+          <div
+            class="footer__social"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
+            <h4>
+              Car service © 2024 • <a href="./privacy.html">Privacy Policy</a>
+            </h4>
             <ul class="footer__social--icons">
               <li>
                 <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
@@ -188,7 +236,11 @@
               </li>
             </ul>
           </div>
-          <div class="footer__address">
+          <div
+            class="footer__address"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
             <h4>
               9863 - 9867 Mill Road, Cambridge, MG09 99HT Freephone: +1 800 559
               6580
@@ -198,7 +250,11 @@
               6580
             </h4>
           </div>
-          <div class="footer__map">
+          <div
+            class="footer__map"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43786.318567629045!2d121.31736377937365!3d14.065343536095517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd5c96860a894b%3A0xfa9e0f05004f4aca!2sSan%20Pablo%20City%2C%20Laguna!5e0!3m2!1sen!2sph!4v1720146448794!5m2!1sen!2sph"
               width="680"
@@ -213,9 +269,9 @@
       </div>
     </footer>
 
+    <a href="#" class="backToTop"><i class="fa-solid fa-chevron-up"></i></a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="./js/slider.js"></script>
-    <!-- <script src="./js/toggleMenu.js"></script> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
