--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Service BLOG</title>
+    <link rel="icon" href="./img/home/logo.png" />
     <link rel="stylesheet" href="./dist/css/main.min.css" />
     <link
       rel="stylesheet"
@@ -14,6 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body class="bg--dark">
     <!-- HEADER -->
@@ -24,7 +26,11 @@
             <img src="./img/home/logo.png" alt="" />
           </div>
           <nav>
-            <ul class="header__nav">
+            <ul
+              class="header__nav"
+              data-aos="fade-down"
+              data-aos-duration="1300"
+            >
               <li><a href="./index.html">HOME</a></li>
               <li><a href="./about.html">ABOUT</a></li>
               <li><a href="./services.html">SERVICES</a></li>
@@ -43,7 +49,11 @@
           <h2 class="title">BLOG</h2>
         </div>
         <div class="blog__wrapper bg--gray">
-          <div class="blog__card">
+          <div
+            class="blog__card"
+            data-aos="fade-right"
+            data-aos-duration="1500"
+          >
             <div class="blog__card--date">
               <p>25</p>
               <p>JULY</p>
@@ -63,7 +73,12 @@
               <a href="" class="btn bg--primary">MORE</a>
             </div>
           </div>
-          <div class="blog__card">
+          <div class="divider__light-gray"></div>
+          <div
+            class="blog__card"
+            data-aos="fade-right"
+            data-aos-duration="1500"
+          >
             <div class="blog__card--date">
               <p>22</p>
               <p>JULY</p>
@@ -83,7 +98,12 @@
               <a href="" class="btn bg--primary">MORE</a>
             </div>
           </div>
-          <div class="blog__card">
+          <div class="divider__light-gray"></div>
+          <div
+            class="blog__card"
+            data-aos="fade-right"
+            data-aos-duration="1500"
+          >
             <div class="blog__card--date">
               <p>17</p>
               <p>JULY</p>
@@ -103,7 +123,11 @@
               <a href="" class="btn bg--primary">MORE</a>
             </div>
           </div>
-          <div>
+          <div
+            class="blog__oldEntries"
+            data-aos="fade-right"
+            data-aos-duration="1500"
+          >
             <a href="" class="btn bg--primary">OLDER ENTRIES</a>
           </div>
         </div>
@@ -111,11 +135,14 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer py--1">
+    <footer class="footer py--2">
       <div class="container">
         <div class="footer__wrapper">
-          <div class="footer__social">
-            <h4>Car service © 2024 • <a href="./privacy.html">Privacy Policy</a></h4>
+          <div class="footer__social" data-aos="fade-right"
+          data-aos-duration="1000">
+            <h4>
+              Car service © 2024 • <a href="./privacy.html">Privacy Policy</a>
+            </h4>
             <ul class="footer__social--icons">
               <li>
                 <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
@@ -131,7 +158,8 @@
               </li>
             </ul>
           </div>
-          <div class="footer__address">
+          <div class="footer__address" data-aos="fade-up"
+          data-aos-duration="1000">
             <h4>
               9863 - 9867 Mill Road, Cambridge, MG09 99HT Freephone: +1 800 559
               6580
@@ -141,7 +169,8 @@
               6580
             </h4>
           </div>
-          <div class="footer__map">
+          <div class="footer__map" data-aos="fade-left"
+          data-aos-duration="1000">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43786.318567629045!2d121.31736377937365!3d14.065343536095517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd5c96860a894b%3A0xfa9e0f05004f4aca!2sSan%20Pablo%20City%2C%20Laguna!5e0!3m2!1sen!2sph!4v1720146448794!5m2!1sen!2sph"
               width="680"
@@ -156,6 +185,7 @@
       </div>
     </footer>
 
+    <a href="#" class="backToTop"><i class="fa-solid fa-chevron-up"></i></a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="./js/slider.js"></script>
     <!-- <script src="./js/toggleMenu.js"></script> -->
