--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Service SERVICES</title>
+    <link rel="icon" href="./img/home/logo.png" />
     <link rel="stylesheet" href="./dist/css/main.min.css" />
     <link
       rel="stylesheet"
@@ -14,6 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body class="bg--dark">
     <!-- HEADER -->
@@ -24,7 +26,11 @@
             <img src="./img/home/logo.png" alt="" />
           </div>
           <nav>
-            <ul class="header__nav">
+            <ul
+              class="header__nav"
+              data-aos="fade-down"
+              data-aos-duration="1300"
+            >
               <li><a href="./index.html">HOME</a></li>
               <li><a href="./about.html">ABOUT</a></li>
               <li><a href="./services.html" class="active">SERVICES</a></li>
@@ -42,7 +48,11 @@
         <div class="servicesBanner__title bg--gray">
           <h2 class="title">SERVICES</h2>
         </div>
-        <div class="servicesBanner__wrapper bg--gray">
+        <div
+          class="servicesBanner__wrapper bg--gray"
+          data-aos="fade-up"
+          data-aos-duration="1000"
+        >
           <div class="servicesBanner__slider">
             <div class="servicesBanner__section">
               <div class="servicesBanner__card">
@@ -67,7 +77,7 @@
             <div class="servicesBanner__section">
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic3.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Cooling System</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -76,7 +86,7 @@
               </div>
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic4.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Clutch and automatic transmission</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -87,7 +97,7 @@
             <div class="servicesBanner__section">
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic5.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Auto electrical</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -96,7 +106,7 @@
               </div>
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic6.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Exhaust system</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -116,7 +126,7 @@
               </div>
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic2.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Suspension and shock absorbers</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -127,7 +137,7 @@
             <div class="servicesBanner__section">
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic3.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Cooling System</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -136,7 +146,7 @@
               </div>
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic4.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Clutch and automatic transmission</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -147,7 +157,7 @@
             <div class="servicesBanner__section">
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic5.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Auto electrical</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -156,7 +166,7 @@
               </div>
               <div class="servicesBanner__card">
                 <img src="./img/services/page3_pic6.jpg" alt="" />
-                <a href="">Brake System</a>
+                <a href="">Exhaust system</a>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Numquam ipsam facilis quia, voluptates cupiditate facere?
@@ -164,6 +174,10 @@
                 </p>
               </div>
             </div>
+          </div>
+          <div class="servicesBanner__controls" id="services__controls">
+            <a class="services__prev">←</a>
+            <a class="services__next">→</a>
           </div>
         </div>
       </div>
@@ -173,7 +187,12 @@
     <section class="servicesReport">
       <div class="container">
         <div class="servicesReport__wrapper bg--light">
-          <div class="servicesReport__report">
+          <div
+            class="servicesReport__report"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+            data-aos-offset="500"
+          >
             <h2 class="title">PRICE REPORT</h2>
             <p>
               <a href=""
@@ -181,6 +200,7 @@
                 vel ipsum auctorulv inaroin ullamcorper.</a
               >
             </p>
+            <div class="divider__gray"></div>
             <p>
               Aenean nonummy hendrerit mauris. Phasellus por ta. Fusce suscip
               varius mi. Cum sociis natoque pena tibus et magnis dis parturt
@@ -190,7 +210,11 @@
               Donec accumsan malesuada orci.
             </p>
           </div>
-          <div class="servicesReport__list">
+          <div
+            class="servicesReport__list"
+            data-aos="fade-up"
+            data-aos-duration="1500"
+          >
             <h2 class="title">PRICE LIST</h2>
             <p>
               Sed ut perspiciatis unde omnis iste natus error sit voluptatem
@@ -236,11 +260,14 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer py--1">
+    <footer class="footer py--2">
       <div class="container">
         <div class="footer__wrapper">
-          <div class="footer__social">
-            <h4>Car service © 2024 • <a href="./privacy.html">Privacy Policy</a></h4>
+          <div class="footer__social" data-aos="fade-right"
+          data-aos-duration="1000">
+            <h4>
+              Car service © 2024 • <a href="./privacy.html">Privacy Policy</a>
+            </h4>
             <ul class="footer__social--icons">
               <li>
                 <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
@@ -256,7 +283,8 @@
               </li>
             </ul>
           </div>
-          <div class="footer__address">
+          <div class="footer__address" data-aos="fade-up"
+          data-aos-duration="1000">
             <h4>
               9863 - 9867 Mill Road, Cambridge, MG09 99HT Freephone: +1 800 559
               6580
@@ -266,7 +294,8 @@
               6580
             </h4>
           </div>
-          <div class="footer__map">
+          <div class="footer__map" data-aos="fade-left"
+          data-aos-duration="1000">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43786.318567629045!2d121.31736377937365!3d14.065343536095517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd5c96860a894b%3A0xfa9e0f05004f4aca!2sSan%20Pablo%20City%2C%20Laguna!5e0!3m2!1sen!2sph!4v1720146448794!5m2!1sen!2sph"
               width="680"
@@ -281,8 +310,10 @@
       </div>
     </footer>
 
+    <a href="#" class="backToTop"><i class="fa-solid fa-chevron-up"></i></a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/services__slider.js"></script>
     <!-- <script src="./js/toggleMenu.js"></script> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
